Changelog
=========


1.1.1 (unreleased)
------------------

- Nothing changed yet.


1.1.0 (2017-02-08)
------------------

- Add i18n helper for translations.
  [mathias.leimgruber]

- Implement select2 tag option for adding new keywords.
  This hides the new keyword textarea.
  Warning: this is the new default, you can disable it by passing `tags: false`.
  [mathias.leimgruber]


1.0.4 (2017-02-07)
------------------

- Add support for `schema.Tuple` fields.
  [mathias.leimgruber]


1.0.3 (2016-10-04)
------------------

- Disable compression of the already minified "select2.min.js".
  [mbaechtold]


1.0.2 (2016-09-28)
------------------

- Make "add new term permission" configurable + lawgiver support.
  [mathias.leimgruber]


1.0.1 (2016-09-28)
------------------

- Reinitilize select2 if overlay content is replaced.
  [mathias.leimgruber]


1.0.0 (2016-09-28)
------------------

- Init Release
  [mathias.leimgruber]