@@ -5,7 +5,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- BugFix recarding vocabularies and the tags feature of select2.
+  [mathias.leimgruber]
 
 
 1.1.0 (2017-02-08)
